--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,3 +1,7 @@
 dependencies:
-  idf:
-    version: ">=5.4.0"
+  version: "0.0.0"
+  license: "GPL-3.0"
+  description: "This is a microcontroller peripheral driver library written based on C++11 and later versions."
+  url: "https://github.com/Llgok/cplusplus-bus-driver.git"
+
+  idf: '>=5.4'
